fix z-index

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   font-family: 'Kumbh Sans', sans-serif;
   padding: 13% 0;
   position: relative;
-  z-index: -2;
+
 }
 
 .card {
@@ -25,7 +25,6 @@ body {
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
   text-align: center;
   margin:0 auto;
-  z-index: 1;
 
 }
 
